--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
 @font-face {
 	font-family: 'Computer Modern Serif';
 	src: url('fonts/cmunbx.eot');
@@ -18,6 +19,7 @@
 	font-weight: bold;
 	font-style: normal;
 }
+
 @font-face {
 	font-family: 'Computer Modern Serif';
 	src: url('fonts/cmunti.eot');
@@ -28,6 +30,7 @@
 	font-weight: normal;
 	font-style: italic;
 }
+
 @font-face {
 	font-family: 'Computer Modern Serif';
 	src: url('fonts/cmunbi.eot');
@@ -38,15 +41,18 @@
 	font-weight: bold;
 	font-style: italic;
 }
+
 html, body {
     height: 100%;
     min-height: 100%;
     margin: 0;
     padding: 0;
 }
+
 body {
 	box-sizing: border-box;
 }
+
 .texinput {
 	border: 0;
 	width: 100%;
@@ -56,6 +62,7 @@ body {
 	padding:10px;
 	outline: none;
 }
+
 .page {
 	width: 210mm;
 	/*max-height: 297mm;*/
@@ -64,22 +71,36 @@ body {
 	padding: 20mm 30mm;
 	font-size: 1.6vw;
 	font-family: "Computer Modern";
-}		
+}
+
+.mathjax{
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+}
+
+.mathjax-wrapper {
+	display: -webkit-box;
+}
+
 .toolbox {
 	/*position: absolute;
 	bottom: 0;*/
 }
+
 .btn-toolbox {
 	height: 3em;
 	outline: none;
 }
+
 .ui-splitbar{
 	background-color: lightgray;
 }
+
 .white{
 	background-color: white;
 	color: black;
 }
+
 .black {
 	background-color: black;
 	color: white;
