Renaming directives to start by 'tex'

--- a/templates/texLoader.html
+++ b/templates/texLoader.html
@@ -1,5 +1,5 @@
 <div>
-  <svg width="70" height="20" class="loader" ng-show="loader">
+  <svg width="70" height="20" class="loader" ng-show="texLoader">
     <rect width="20" height="20" x="0" y="0" rx="3" ry="3">
       <animate attributeName="width" values="0;20;20;20;0" dur="1000ms" repeatCount="indefinite"/>
       <animate attributeName="height" values="0;20;20;20;0" dur="1000ms" repeatCount="indefinite"/>
@@ -19,5 +19,5 @@
       <animate attributeName="y" values="10;0;0;0;10" begin="400ms" dur="1000ms" repeatCount="indefinite"/>
     </rect>
   </svg>
-  <div ng-transclude ng-show="!loader"></div>
+  <div ng-transclude ng-show="!texLoader"></div>
 </div>
