nice typesetting af mathjax

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -87,6 +87,10 @@ body {
 	font-family: 'Source Sans Pro', sans-serif;
 }
 
+.document-preview {
+	display: none;
+}
+
 .math p, .math div{
 	display:inline;
 }
