--- a/src/css/style.css
+++ b/src/css/style.css
@@ -73,6 +73,7 @@ body {
 
 .navbar-default {
 	background-image: none;
+	padding-bottom: 7px !important;
 }
 
 .navbar-brand {
@@ -86,6 +87,7 @@ body {
 .navbar {
 	min-height: auto;
 	margin-bottom: 0;
+	border-radius: 0px;
 }
 
 .navbar-nav {
