--- a/src/templates/controllers/editor.html
+++ b/src/templates/controllers/editor.html
@@ -16,13 +16,21 @@
 						<span ng-class="state | rstolabel">{{ state | rstotext }}</span>
 						<span>{{ pendingdata }}</span>
 					</p>
+					<ul class="nav navbar-nav">
+						<li>
+							<a ng-click="onFacebookLoginClick()" ng-hide="isLoggedIn" class="ng-hide">Facebook</a>
+						</li>
+						<li>
+							<a ng-click="onFacebookLogout()" ng-show="isLoggedIn" class="ng-hide">Log Out</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</nav>
 	</div>
-	<div ui-layout-container> 
+	<div ui-layout-container>
 		<div ui-layout="{flow : 'column', onresize: onPageResize }">
-			
+
 			<div ui-layout-container class="editor-container">
 				<div ui-ace="aceOptions" ng-model="document" ng-readonly="!docloaded"></div>
 			</div>
