--- a/src/css/style.css
+++ b/src/css/style.css
@@ -104,9 +104,12 @@ body {
 }
 
 .document-container {
-	padding: 1em 2em;
 	background-color: rgb(240, 240, 240);
 	border-top: 13px rgb(240, 240, 240) solid;
+}
+
+.tex-document {
+	padding: 1em 2em;
 }
 
 .editor-container {
