--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,6 +71,19 @@ body {
 	height: 100%;
 }
 
+@media (min-width: 768px)
+.navbar-collapse {
+  width: auto;
+  border-top: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.navbar-text {
+	margin-top: 10px;
+	margin-bottom: 0;
+}
+
 .navbar-default {
 	background-image: none;
 	padding-bottom: 7px !important;
@@ -80,7 +93,7 @@ body {
 	float: left;
 	padding: 15px 15px;
 	font-size: 18px;
-	line-height: 20px;
+	line-height: 10px;
 	height: 40px;
 }
 
@@ -88,6 +101,7 @@ body {
 	min-height: auto;
 	margin-bottom: 0;
 	border-radius: 0px;
+	padding: 0 !important;
 }
 
 .navbar-nav {
