--- a/src/templates/controllers/documentlist.html
+++ b/src/templates/controllers/documentlist.html
@@ -1,1 +1,23 @@
-<h1>Documents will be listed here</h1>
+<div ng-controller="documentListController">
+	<div class="topbar">
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="#">
+						MarkTex
+					</a>
+				</div>
+				
+				<div class="collapse navbar-collapse">
+					<ul class="nav navbar-nav">
+						<li><a href="/editor">Dojo <span class="sr-only">(dojo)</span></a></li>
+						<li class="active"><a href="/documents">Documents <span class="sr-only">(documents)</span></a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</div>
+	<div>
+		<h1>Show me all the documents!</h1>
+	</div>
+</div>
