--- a/src/templates/controllers/editor.html
+++ b/src/templates/controllers/editor.html
@@ -7,6 +7,10 @@
 						MarkTex
 					</a>
 				</div>
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="/editor">Dojo <span class="sr-only">(dojo)</span></a></li>
+					<li><a href="/documents">Documents <span class="sr-only">(documents)</span></a></li>
+				</ul>
 				<div class="collapse navbar-collapse navbar-right">
 					<p class="navbar-text">
 						<span ng-class="state | rstolabel">{{ state | rstotext }}</span>
