fix dokument altid readonly

--- a/src/templates/controllers/editor.html
+++ b/src/templates/controllers/editor.html
@@ -1,4 +1,4 @@
 <div class="editor">
-	<div tex-markdown="{ onAceLoaded: onAceLoaded }" ng-if="docloaded" class="tex-markdown"></div>
+	<div tex-markdown="tmOptions" ng-if="docloaded" class="tex-markdown"></div>
 	<div ng-if="!docloaded">Loading {{ docname }}...</div>
 </div>
