--- a/src/templates/directives/texMarkdown.html
+++ b/src/templates/directives/texMarkdown.html
@@ -2,7 +2,7 @@
 	
 	<div ui-layout-container class="editor-container">
 		<div ui-ace="{ useWrapMode : true, showGutter: false, theme:'chrome',mode: 'markdown', highlightActiveLine: false, onLoad: aceLoaded }"
-			ng-model="document" ng-readonly="!docloaded"></div>
+			ng-model="document" ng-readonly="texMarkdown.readonly"></div>
 	</div>
 
 	<div ui-layout-container class="document-container">
