fix menu links not changing active state

--- a/src/templates/controllers/documentlist.html
+++ b/src/templates/controllers/documentlist.html
@@ -1,3 +1,4 @@
 <div>
 	<h1>Show me all the documents!</h1>
+	<img src="https://imgflip.com/readImage?iid=61533"  style="position: absolute; bottom: 0; right: 0;"/>
 </div>
