fix bug der slettede dokumenter, samt mere cleanup

--- a/src/templates/controllers/editor.html
+++ b/src/templates/controllers/editor.html
@@ -1,4 +1,6 @@
 <div class="editor">
-	<div tex-markdown="tmOptions" ng-if="docloaded" class="tex-markdown"></div>
-	<div ng-if="!docloaded">Loading {{ docname }}...</div>
+	<div tex-markdown="tmOptions" ng-show="docloaded" class="tex-markdown"></div>
+	<div ng-hide="docloaded" class="docloading">
+		<div class="container"><span tex-loader></span> <span class="text">Loading {{ docname }}...</span></div>
+	</div>
 </div>
