--- a/src/templates/directives/texMenu.html
+++ b/src/templates/directives/texMenu.html
@@ -1,4 +1,4 @@
-<div class="topbar">
+<div class="topbar" ng-hide="nomenu">
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
