--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,38 +1,245 @@
+@import 'loader';
+
 /* ANIMATIONS
 ============================================================================= */
 
-.page.ng-leave 	{ z-index:9999; }
-.page.ng-enter 	{ z-index:8888; }
-
-/* page specific animations ------------------------ */
-
-.viewport.ng-enter{
-	-webkit-animation: scaleUpDown 0.5s both ease-in;
-	-moz-animation: scaleUpDown 0.5s both ease-in;
-	animation: scaleUpDown 0.5s both ease-in;
-	-webkit-animation-delay: .3s;
-	animation-delay: .3s;
+.viewport.ng-enter, .viewport .ng-hide-add {
+    -webkit-animation: moveFromTopFade .7s ease both;
+	animation: moveFromTopFade .7s ease both;
 }
 
-.viewport.ng-leave {
-    -webkit-animation: scaleDown .7s ease both;
-	animation: scaleDown .7s ease both;
+.viewport .ng-hide-remove {
+	z-index: 2000;
 }
 
-@-webkit-keyframes scaleUpDown {
-	from { opacity: 0; -webkit-transform: scale(1.2); }
-}
-
-@keyframes scaleUpDown {
-	from { opacity: 0; -webkit-transform: scale(1.2); transform: scale(1.2); }
-}
-
-@-webkit-keyframes scaleDown {
+@-webkit-keyframes moveToBottom {
 	from { }
-	to { opacity: 0; -webkit-transform: scale(.8); }
+	to { -webkit-transform: translateY(100%); }
 }
 
-@keyframes scaleDown {
+@keyframes moveToBottom {
 	from { }
-	to { opacity: 0; -webkit-transform: scale(.8); transform: scale(.8); }
+	to { -webkit-transform: translateY(100%); transform: translateY(100%); }
+}
+
+@-webkit-keyframes moveFromTopFade {
+	from { opacity: 0.3; -webkit-transform: translateY(-100%); }
+}
+@keyframes moveFromTopFade {
+	from { opacity: 0.3; -webkit-transform: translateY(-100%); transform: translateY(-100%); }
+}
+
+/* ANIMATIONS END
+============================================================================= */
+
+/* FONTS
+============================================================================= */
+
+@font-face {
+	font-family: 'Computer Modern Serif';
+	src: url('fonts/cmunrm.eot');
+	src: url('fonts/cmunrm.eot?#iefix') format('embedded-opentype'),
+		 url('fonts/cmunrm.woff') format('woff'),
+		 url('fonts/cmunrm.ttf') format('truetype'),
+		 url('fonts/cmunrm.svg#cmunrm') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Computer Modern Serif';
+	src: url('fonts/cmunbx.eot');
+	src: url('fonts/cmunbx.eot?#iefix') format('embedded-opentype'),
+		 url('fonts/cmunbx.woff') format('woff'),
+		 url('fonts/cmunbx.ttf') format('truetype'),
+		 url('fonts/cmunbx.svg#cmunbx') format('svg');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Computer Modern Serif';
+	src: url('fonts/cmunti.eot');
+	src: url('fonts/cmunti.eot?#iefix') format('embedded-opentype'),
+		 url('fonts/cmunti.woff') format('woff'),
+		 url('fonts/cmunti.ttf') format('truetype'),
+		 url('fonts/cmunti.svg#cmunti') format('svg');
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Computer Modern Serif';
+	src: url('fonts/cmunbi.eot');
+	src: url('fonts/cmunbi.eot?#iefix') format('embedded-opentype'),
+		 url('fonts/cmunbi.woff') format('woff'),
+		 url('fonts/cmunbi.ttf') format('truetype'),
+		 url('fonts/cmunbi.svg#cmunbi') format('svg');
+	font-weight: bold;
+	font-style: italic;
+}
+
+/* FONTS END
+============================================================================= */
+
+/* WHATEVER
+============================================================================= */
+
+html, body {
+    height: 100%;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+	box-sizing: border-box;
+	font-family: 'Source Sans Pro', 'Computer Modern', sans-serif;
+	height: 100%;
+	padding-top: 42px;
+}
+
+.topbar {
+	margin-top: -42px;
+	z-index: 10000;
+	position: relative;
+}
+
+.viewport {
+	height: 100%;
+}
+
+.editor {
+	height: 100%;
+}
+
+.texinput {
+	border: 0;
+	width: 100%;
+	height: 100%;
+	font-family: monospace;
+	font-size: 0.8em;
+	padding: 10px;
+	outline: none;
+}
+
+.ace_editor {
+	position:absolute;
+	top:0;
+	bottom:0;
+	height: 100%;
+}
+
+.tex-markdown-container {
+	position: relative;
+	height: 100%;
+}
+
+.tex-markdown {
+	height: 100%;
+}
+
+/*@media (min-width: 768px)*/
+.navbar-collapse {
+	width: auto;
+	border-top: 0;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+.navbar-text {
+	margin-top: 10px;
+	margin-bottom: 0;
+}
+
+.navbar-nav > li > a {
+	padding-top: 0;
+	padding-bottom: 0;
+}
+
+.navbar-default {
+	background-image: none;
+	padding-bottom: 7px !important;
+}
+
+.navbar-brand {
+	float: left;
+	padding: 15px 15px;
+	font-size: 18px;
+	line-height: 10px;
+	height: 40px;
+}
+
+.navbar {
+	min-height: auto;
+	margin-bottom: 0;
+	border-radius: 0px;
+	padding: 0 !important;
+}
+
+.navbar-nav {
+	margin: 8px 0;
+}
+
+.document {
+	padding-left: 0.5em;
+	font-family: 'Source Sans Pro', sans-serif;
+}
+
+.document-preview {
+	display: none;
+}
+
+.document-container {
+	background-color: rgb(240, 240, 240);
+	border-top: 13px rgb(240, 240, 240) solid;
+}
+
+.tex-document {
+	padding: 1em 2em;
+}
+
+.editor-container {
+	padding: 1em 2em;
+}
+
+.math p, .math div{
+	display:inline;
+}
+
+.ui-splitbar {
+	background-color: rgb(247, 247, 247);
+}
+
+.center{
+	text-align: center;
+}
+
+.docloading {
+	height: 100%;
+	width: 100%;
+	background-color: rgb(73, 74, 69);
+	color: white;
+	text-align: center;
+	display: table;
+
+	.container {
+		display: table-cell;
+  		vertical-align: middle;
+	}
+
+	.text {
+		margin-left: 20px;
+		position: relative;
+		bottom: 8px;
+	}
+}
+
+svg rect {
+    fill: white;
+}
+
+svg.loader {
+	zoom: 0.4;
+	padding-left: 2em;
 }
