--- a/src/templates/directives/texFacebook.html
+++ b/src/templates/directives/texFacebook.html
@@ -1,4 +1,4 @@
 <span>
 	<a ng-click="onFacebookLoginClick()" ng-if="!isLoggedIn">Facebook</a>
-	<a ng-click="onFacebookLogout()" ng-if="isLoggedIn">Log Out</a>
+	<a ng-click="onFacebookLogoutClick()" ng-if="isLoggedIn">Log Out</a>
 </span>
