--- a/src/templates/directives/texMenu.html
+++ b/src/templates/directives/texMenu.html
@@ -9,7 +9,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<span tex-facebook></span>
+					<span class="navbar-text"><span tex-facebook></span></span>
 				</li>
 			</ul>
 			<div class="collapse navbar-collapse navbar-right">
