add service for getting userdata. add username to texFacebook directive

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -163,6 +163,10 @@ body {
 	padding-bottom: 7px !important;
 }
 
+.navbar-username {
+	padding: 1em;
+}
+
 .navbar-brand {
 	float: left;
 	padding: 15px 15px;
