--- a/src/templates/controllers/editor.html
+++ b/src/templates/controllers/editor.html
@@ -2,7 +2,7 @@
 	<div tex-markdown="tmOptions" ng-show="docloaded" class="tex-markdown"></div>
 	<div ng-hide="docloaded" class="docloading">
 		<div class="container">
-			<span tex-loader></span> <span class="text">Loading {{ docname }}...</span>
+			<span tex-loader></span> <span class="text">{{ docname }}</span>
 		</div>
 	</div>
 </div>
