--- a/src/sass/_frame.scss
+++ b/src/sass/_frame.scss
@@ -22,6 +22,14 @@ body {
 	height: 100%;
 }
 
+/////// BUTTONS
+
+.btn-default {
+	text-shadow: none;
+}
+
+/////// BUTTONS END
+
 /////// NAVBAR
 
 .navbar-collapse {
