--- a/src/templates/controllers/optionsModal.html
+++ b/src/templates/controllers/optionsModal.html
@@ -6,14 +6,14 @@
 	<div ng-form name="document" class="input-group rename-group">
 		<input type="text" name="doctitle" class="form-control create-text" ng-model="doc.name" placeholder="Document title.." required>
 		<span class="input-group-btn">
-	        <button class="btn btn-default" type="button" ng-click="update(doc)" ng-disabled="doc.loading || document.doctitle.$error.required">{{ loading ? 'Loading' : 'Rename' }}</button>
+	        <button class="btn btn-default" type="button" ng-click="update()" ng-disabled="doc.loading || document.doctitle.$error.required">{{ loading ? 'Loading' : 'Rename' }}</button>
 	    </span>
     </div>
 
     <h4><i class="fa fa-share-alt"></i> Sharing</h4>
     <div>
     	<div class="add-share">
-	    	<div tex-share-doc="connections" ng-model="doc.shared" on-select="update(doc)" on-remove="update(doc)"/>
+	    	<div tex-share-doc="connections" ng-model="doc.shared" on-change="update"/>
     	</div>
     	<div class="text-info italic not-shared" ng-show="doc.shared.length === 0 || !doc.shared">You are not sharing this document with anyone, yet</div>
     </div>
