--- a/src/templates/directives/texFacebook.html
+++ b/src/templates/directives/texFacebook.html
@@ -1,5 +1,5 @@
 <div>
-	<img class="profile-picture" src="{{ imgurl }}" ng-show="isLoggedIn"/>
+	<img class="profile-picture" style="margin-top: -4px;" src="{{ imgurl }}" ng-show="isLoggedIn"/>
 	<span class="navbar-username">{{ username }}</span>
 	<span>
 		<a ng-click="onFacebookLoginClick()" ng-if="!isLoggedIn">Connect using Facebook</a>
