--- a/src/templates/directives/texShareDoc.html
+++ b/src/templates/directives/texShareDoc.html
@@ -1,5 +1,5 @@
 <ui-select multiple ng-model="$parent.ngModel" theme="bootstrap" ng-disabled="disabled" class="share-select">
-	<ui-select-match placeholder="Select persons...">{{ $item.name }}</ui-select-match>
+	<ui-select-match placeholder="{{placeholder}}">{{ $item.name }}</ui-select-match>
 	<ui-select-choices repeat="person in texShareDoc | filter:$select.search">
 		<div>
 			<div style="display: inline">
