--- a/src/templates/controllers/documentlist.html
+++ b/src/templates/controllers/documentlist.html
@@ -18,7 +18,7 @@
 			<tbody>
 				<tr ng-repeat="doc in documents">
 					<td>
-						<i class="optionsicon fa fa-cog fa-2x" ng-click="openOptions(doc)"></i>
+						<i ng-hide="selfId === undefined || selfId !== doc.creatorId" class="optionsicon fa fa-cog fa-2x" ng-click="openOptions(doc)"></i>
 					</td>
 					<td ng-click="gotoDoc(doc)">
 						<i class="fa fa-file-text-o fa-2x"></i>
@@ -27,9 +27,9 @@
 						<span ng-click="gotoDoc(doc)" ng-hide="doc.options">{{ doc.name }}</span>
 					</td>
 					<td ng-click="gotoDoc(doc)"><span am-time-ago="doc.updated_at"></span></td>
-					<td>
+					<td ng-hide="selfId === undefined">
 						<span ng-if="doc.creatorId !== selfId">{{ doc.creatorName }}</span>
-						<span ng-hide="selfId === undefined" ng-repeat="person in doc.permittedUsers | withoutselfifcreator:doc.creatorId:selfId:doc.creatorName ">{{ $last ? person.facebook.name : (person.facebook.name + ',') }}</span>
+						<span ng-repeat="person in doc.permittedUsers | withoutselfifcreator:doc.creatorId:selfId:doc.creatorName ">{{ $last ? person.facebook.name : (person.facebook.name + ',') }}</span>
 					</td>
 				</tr>
 			</tbody>
