document load overlay is now correctly in front of text

--- a/src/sass/_editor.scss
+++ b/src/sass/_editor.scss
@@ -74,6 +74,8 @@
 	color: white;
 	text-align: center;
 	display: table;
+	position: relative;
+	z-index: 100000;
 
 	.container {
 		display: table-cell;
