--- a/src/sass/_loader.scss
+++ b/src/sass/_loader.scss
@@ -21,6 +21,7 @@
 		height: 60%;
 		display: inline-block;
 		position: absolute;
+		z-index: 100001;
 		top: 0;
 		background-color: rgb(138, 201, 239);
 		border-radius: 100%;
