fixed horrible bug, that deleted multiple documents. added document title to menu

--- a/src/sass/_frame.scss
+++ b/src/sass/_frame.scss
@@ -138,6 +138,16 @@ body {
 	margin: 0;
 }
 
+.navbar-text.title{
+	position: absolute;
+	width: 100%;
+	left: 0;
+	text-align: center;
+	margin: auto;
+	padding-top: 10px;
+	color: white;
+}
+
 /////// NAVBAR END
 
 /////// NOTIFICATIONS
