--- a/src/templates/directives/texFacebook.html
+++ b/src/templates/directives/texFacebook.html
@@ -2,7 +2,7 @@
 	<img class="profile-picture" style="margin-top: -4px;" src="{{ imgurl }}" ng-show="isLoggedIn"/>
 	<span class="navbar-username">{{ username }}</span>
 	<span>
-		<a ng-click="onFacebookLoginClick()" ng-if="!isLoggedIn">Connect using Facebook</a>
+		<a ng-click="onFacebookLoginClick()" ng-if="!isLoggedIn && !loading">Connect using Facebook</a>
 		<a ng-click="onFacebookLogoutClick()" ng-if="isLoggedIn">
 			Log Out
 		</a>
