fixed menu items not activating correctly. fixed login button not visible. updated sharejs

--- a/src/sass/_frame.scss
+++ b/src/sass/_frame.scss
@@ -140,8 +140,7 @@ body {
 
 .navbar-text.title{
 	position: absolute;
-	width: 100%;
-	left: 0;
+	left: 50%;
 	text-align: center;
 	margin: auto;
 	padding-top: 10px;
