--- a/src/templates/directives/texFacebook.html
+++ b/src/templates/directives/texFacebook.html
@@ -3,8 +3,6 @@
 	<span class="navbar-username">{{ username }}</span>
 	<span>
 		<a ng-click="onFacebookLoginClick()" ng-if="!isLoggedIn && !loading">Connect using Facebook</a>
-		<a ng-click="onFacebookLogoutClick()" ng-if="isLoggedIn">
-			Log Out
-		</a>
+		<a ng-click="onFacebookLogoutClick()" ng-if="isLoggedIn">Log Out</a>
 	</span>
 </div>
