--- a/src/templates/controllers/documentlist.html
+++ b/src/templates/controllers/documentlist.html
@@ -2,7 +2,7 @@
 
 	<div class="documentslist">
 		<form class="createwrapper input-group" name="create">
-	    	<input type="text" name="createTitle" class="form-control create-text" placeholder="Create a new document..." aria-describedby="basic-addon2" ng-model="createTitle" required>
+	    	<input type="text" name="createTitle" class="form-control create-text" placeholder="Title of your new document goes here..." aria-describedby="basic-addon2" ng-model="createTitle" required>
 	    	<span class="input-group-btn">
 		        <button class="btn btn-success" type="submit" ng-click="createDoc()" ng-disabled="creating || create.createTitle.$error.required">{{ creating ? 'Creating' : 'Create' }}</button>
 		    </span>
