better scroll sync

--- a/src/sass/_frame.scss
+++ b/src/sass/_frame.scss
@@ -38,6 +38,10 @@ body {
 	z-index: 10000 !important;
 }
 
+.modal-footer{
+	padding: 15px;
+}
+
 .modal-backdrop {
 	z-index: 10000 !important;
 	width: 100%;
