--- a/src/templates/controllers/leaveSharingModal.html
+++ b/src/templates/controllers/leaveSharingModal.html
@@ -5,6 +5,6 @@
     You are not the owner of this document, therefore you cannot edit its options. If you no longer wish to collaborate on {{ doc.name }}, you can leave it. Then it will no longer show in your list of documents.
 </div>
 <div class="modal-footer">
-    <button class="btn btn-danger" ng-click="leave(doc)">Sure, leave this document</button>
+    <button class="btn btn-danger" style="float:left" ng-click="leave(doc)">Sure, leave this document</button>
     <button class="btn btn-primary" ng-click="close()" ng-disabled="document.$invalid">Close</button>
 </div>
