--- a/src/templates/directives/texMenu.html
+++ b/src/templates/directives/texMenu.html
@@ -7,9 +7,9 @@
 			<ul class="nav navbar-nav" ng-repeat="item in items">
 				<li ng-class="item.active ? 'active' : ''"><a href="{{ item.url }}">{{ item.title }}</a></li>
 			</ul>
-			<ul class="nav navbar-nav" ng-hide="doctitle.length === 0" >
+			<!--<ul class="nav navbar-nav" ng-hide="doctitle.length === 0" >
 				<li><a href="" ng-click="loadtest()">Test</a></li>
-			</ul>
+			</ul>-->
 
 			<p ng-hide="doctitle.length === 0" class="navbar-text title">{{ doctitle }}</p>
 
