using KaTeX for math rendering now. its super fast. added functionality for downloading documents and importing again

--- a/src/sass/_documents.scss
+++ b/src/sass/_documents.scss
@@ -78,6 +78,11 @@
 	.document-row:hover {
 		color: #B9D98A;
 	}
+
+	.btn-upload {
+		margin: -1em 0em 2em 0em;
+	    width: 100%;
+	}
 }
 
 // IN MODALS
