--- a/src/templates/controllers/optionsModal.html
+++ b/src/templates/controllers/optionsModal.html
@@ -3,9 +3,9 @@
 </div>
 <div class="modal-body">
     <h4>Title</h4>
-	<div ng-form name="document">
-		<input type="text" name="doctitle" class="form-control create-text" ng-model="doc.name" required>
-		<span class="text-danger" ng-show="document.doctitle.$error.required">Documents must have a title</span>
+    <div ng-form name="document">
+        <input type="text" name="doctitle" class="form-control create-text" ng-model="doc.name" required>
+        <span class="text-danger" ng-show="document.doctitle.$error.required">Documents must have a title</span>
     </div>
 
     <h4><i class="fa fa-share-alt"></i> Sharing</h4>
@@ -14,6 +14,11 @@
 	    	<div tex-share-doc="connections" self-id="selfId" ng-model="doc.permittedUsers" on-change="update" placeholder="connections.length > 0 ? 'Share with your friends...' : 'You have no friends using MarkTex, thus no one to share with'"/></div>
     	</div>
     	<div class="text-info italic not-shared" ng-show="doc.permittedUsers.length === 0 || !doc.permittedUsers">You are not sharing this document with anyone, yet</div>
+    </div>
+
+    <h4>Other</h4>
+    <div ng-form name="document">
+        <a href="#" ng-click="download()">Save to disk</a>
     </div>
 </div>
 <div class="modal-footer">
